--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button id="btn__new-word">New Game</button>
       </div>
       <div class="game__container--game--messages"></div>
+      <div class="game__container--secret-word-reveal"></div>
       <div class="game__container-body hidden-class">
         <div class="game__container--body-left">
           <h3>Secret Word</h3>
